manifest추가 및 캘린더 추가(아직 오늘버튼, 년월 데이터피커 하기 전)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".RegMoneyBookActivity"/>
         <activity android:name=".UpdateMoneyBookActivity"/>
+        <activity android:name=".CalendarActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
