--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegMoneyBookActivity"/>
-        <activity android:name=".UpdateMoneyBookActivity"/>
+        <activity android:name=".daily.CategorySpinnerActivity"
+            android:theme="@android:style/Theme.Dialog" ></activity>
+        <activity
+            android:name=".daily.AssetSpinerActivity"
+            android:theme="@android:style/Theme.Dialog" />
         <activity android:name=".CalendarActivity"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".daily.RegMoneyBookActivity" />
+        <activity android:name=".daily.UpdateMoneyBookActivity" />
+        <activity android:name=".daily.MainActivity" />
+        <activity android:name=".PasswordConfirmActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
