년도별 통계(데이터피커를 하기 전에는 왜 안먹는지 노이해..ㅠ)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".daily.RegMoneyBookActivity" />
         <activity android:name=".daily.UpdateMoneyBookActivity" />
         <activity android:name=".daily.MainActivity" />
+        <activity android:name=".ChartActivity" />
         <activity android:name=".PasswordConfirmActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
