디비 백업,불러오기완료

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-
+    implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
 }
